--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -1,13 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
 
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
-
 <html lang="zxx">
 
 <head>
@@ -47,7 +40,7 @@
 
 <header class="navigation fixed-top">
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="index.html"><img src="{% static 'images/logo.png' %}" alt="Egen"></a>
+    <a class="navbar-brand" href="index.html"><img src="{% static 'images/logo.png' %}" alt="Bit and Bytes" height="32" width="90"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
       aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -78,7 +71,7 @@
             <a class="dropdown-item" href="career.html">Career</a>
             <a class="dropdown-item" href="career-single.html">Career Details</a>
             <a class="dropdown-item" href="blog-single.html">Blog Details</a>
-            <a class="dropdown-item" href="pricing.html">Pricing</a></a>
+            <a class="dropdown-item" href="pricing.html">Pricing</a>
             <a class="dropdown-item" href="faqs.html">FAQ's</a>
           </div>
         </li>
@@ -92,11 +85,11 @@
 
 <!-- banner -->
 <section class="banner bg-cover position-relative d-flex justify-content-center align-items-center"
-  data-background="images/banner/banner2.jpg">
+  data-background="{% static 'images/banner/banner2.jpg' %}">
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
-        <h1 class="display-1 text-white font-weight-bold font-primary">Creative Agency</h1>
+        <h1 class="display-1 text-white font-weight-bold font-primary">Bit & Bytes Inc.</h1>
       </div>
     </div>
   </div>
@@ -229,7 +222,10 @@
     <div class="row">
       <div class="col-lg-10 mx-auto text-center">
         <h2>Our Team</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+        <p>Our company is a team of skilled software developers, designers, and
+          project managers who are passionate about creating innovative and userfriendly software solutions. We have a diverse team with a range of
+          expertise, including web and mobile development, data analysis, and
+          artificial intelligence.</p>
         <div class="section-border"></div>
       </div>
     </div>
@@ -276,16 +272,24 @@
 <!-- /team -->
 
 <!-- about -->
-<section class="section-lg position-relative bg-cover" data-background="images/backgrounds/about-bg.jpg">
+<section class="section-lg position-relative bg-cover" data-background="{% static 'images/backgrounds/about-bg' %}.jpg">
   <img src="{% static 'images/backgrounds/about-bg-overlay.png' %}" alt="overlay" class="overlay-image img-fluid">
   <div class="container">
     <div class="row justify-content-between">
       <div class="col-lg-6 col-md-8 col-sm-7 col-8">
         <h2 class="text-white mb-4">Who We Are</h2>
-        <p class="text-light mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-          incididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.</p>
+        <p class="text-light mb-4" style="margin-left:-50%">Bits and Bytes is the partner of choice for many of the
+          world’s leading enterprises, SMEs and technology
+          challengers. We help businesses elevate their value
+          through custom software development, product design,
+          QA and consultancy services. We can help to maintain and modernize your IT
+          infrastructure and solve various infrastructure-specific
+          issues a business may face. Our company is a team of skilled software developers,
+          designers, and project managers who are passionate
+          about creating innovative and user-friendly software
+          solutions. We have a diverse team with a range of
+          expertise, including web and mobile development,
+          data analysis, and artificial intelligence.</p>
         <a href="about.html" class="btn btn-primary">Read More</a>
       </div>
       <div class="col-md-2 col-sm-4 col-4 text-right align-self-end">
@@ -361,7 +365,7 @@
 
 <!-- call to action -->
 <section>
-  <div class="container section-sm overlay-secondary-half bg-cover" data-background="images/backgrounds/cta-bg.jpg">
+  <div class="container section-sm overlay-secondary-half bg-cover" data-background="{% static 'images/backgrounds/cta-bg' %}.jpg">
   <div class="row">
     <div class="col-lg-8 offset-lg-1">
       <h2 class="text-gradient-primary">Let's Start With Us!</h2>
