Added landing page content, made some ui fixes, converted our-team section to a component

--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Agen | Bootstrap Agency Template</title>
+  <title>Bit and Bytes | Turn your ideas into reality.</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -102,26 +102,11 @@
     <div class="row">
       <div class="col-lg-10 mx-auto text-center">
         <h2 class="section-title">Our Services</h2>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.</p>
+        <p class="lead">We Offer a Wide Variety of IT Services</p>
         <div class="section-border"></div>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 mb-4 mb-lg-0">
-        <div class="card hover-bg-secondary shadow py-4 active">
-          <div class="card-body text-center">
-            <div class="position-relative">
-              <i
-                class="icon-lg icon-box bg-gradient-primary rounded-circle ti-palette mb-5 d-inline-block text-white"></i>
-              <i class="icon-lg icon-watermark text-white ti-palette"></i>
-            </div>
-            <h4 class="mb-4">Design</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo</p>
-          </div>
-        </div>
-      </div>
       <div class="col-lg-4 mb-4 mb-lg-0">
         <div class="card hover-bg-secondary shadow py-4">
           <div class="card-body text-center">
@@ -130,8 +115,22 @@
                 class="icon-lg icon-box bg-gradient-primary rounded-circle ti-dashboard mb-5 d-inline-block text-white"></i>
               <i class="icon-lg icon-watermark text-white ti-dashboard"></i>
             </div>
-            <h4 class="mb-4">Development</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo</p>
+            <h4 class="mb-4">Web Development</h4>
+            <p>We carry more than just good coding skills. Our experience makes us stand out from other web development.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4 mb-lg-0">
+        {% comment %} <div class="card hover-bg-secondary shadow py-4 active"> {% endcomment %}
+        <div class="card hover-bg-secondary shadow py-4">
+          <div class="card-body text-center">
+            <div class="position-relative">
+              <i
+                class="icon-lg icon-box bg-gradient-primary rounded-circle ti-palette mb-5 d-inline-block text-white"></i>
+              <i class="icon-lg icon-watermark text-white ti-palette"></i>
+            </div>
+            <h4 class="mb-4">UI/UX Design</h4>
+            <p>Build the product you need on time with an experienced team that uses a clear and effective design process.</p>
           </div>
         </div>
       </div>
@@ -144,7 +143,49 @@
               <i class="icon-lg icon-watermark text-white ti-announcement"></i>
             </div>
             <h4 class="mb-4">Marketing</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo</p>
+            <p>Unlock your business's true potential with our cutting-edge marketing services. Boost your brand's visibility, engage customers, and achieve remarkable growth. </p> 
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 mb-4 mb-lg-0">
+        <div class="card hover-bg-secondary shadow py-4">
+          <div class="card-body text-center">
+            <div class="position-relative">
+              <i
+                class="icon-lg icon-box bg-gradient-primary rounded-circle ti-rocket mb-5 d-inline-block text-white"></i>
+              <i class="icon-lg icon-watermark text-white ti-rocket"></i>
+            </div>
+            <h4 class="mb-4">QA & Testing</h4>
+            <p>Turn to our experts to perform comprehensive, multi-stage testing and auditing of your software.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4 mb-lg-0">
+        <div class="card hover-bg-secondary shadow py-4">
+          <div class="card-body text-center">
+            <div class="position-relative">
+              <i
+                class="icon-lg icon-box bg-gradient-primary rounded-circle ti-android mb-5 d-inline-block text-white"></i>
+              <i class="icon-lg icon-watermark text-white ti-android"></i>
+            </div>
+            <h4 class="mb-4">Mobile Development
+            </h4>
+            <p>Create complex enterprise software, ensure reliable software integration, modernise your legacy system.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4 mb-lg-0">
+        <div class="card hover-bg-secondary shadow py-4">
+          <div class="card-body text-center">
+            <div class="position-relative">
+              <i
+                class="icon-lg icon-box bg-gradient-primary rounded-circle ti-bar-chart mb-5 d-inline-block text-white"></i>
+              <i class="icon-lg icon-watermark text-white ti-bar-chart"></i>
+            </div>
+            <h4 class="mb-4">IT Counsultancy</h4>
+            <p>Trust our top minds to eliminate workflow pain points, implement new tech, and consolidate app portfolios.</p>
           </div>
         </div>
       </div>
@@ -176,7 +217,7 @@
                   <i class="icon text-gradient-primary ti-vector mr-3"></i>
                   <div class="media-body">
                     <h4 class="text-white">User Experience</h4>
-                    <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo</p>
+                    <p class="text-light">Delighting your users is our expertise. From intuitive designs to seamless interactions, we craft experiences that leave a lasting impression. Partner with us for unparalleled user satisfaction.</p>
                   </div>
                 </div>
               </div>
@@ -185,7 +226,7 @@
                   <i class="icon text-gradient-primary ti-layout mr-3"></i>
                   <div class="media-body">
                     <h4 class="text-white">Responsive Layout</h4>
-                    <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo</p>
+                    <p class="text-light">Seamlessly adapting to all devices. Our designs ensure your website looks stunning on every screen, delivering a consistent and engaging user experience. Embrace accessibility and innovation with us.</p>
                   </div>
                 </div>
               </div>
@@ -194,7 +235,7 @@
                   <i class="icon text-gradient-primary ti-headphone-alt mr-3"></i>
                   <div class="media-body">
                     <h4 class="text-white">Digital Solutions</h4>
-                    <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo</p>
+                    <p class="text-light">Empowering your success in the digital era. Our comprehensive suite of cutting-edge services caters to all your needs, from web development to marketing. Embrace the future with us.</p>
                   </div>
                 </div>
               </div>
@@ -202,8 +243,8 @@
                 <div class="media">
                   <i class="icon text-gradient-primary ti-ruler-pencil mr-3"></i>
                   <div class="media-body">
-                    <h4 class="text-white">Bootstrap 4x</h4>
-                    <p class="text-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo</p>
+                    <h4 class="text-white">UI Kits</h4>
+                    <p class="text-light">We harness the power of the best UI kit for optimal user experiences and exceptional digital solutions.</p>
                   </div>
                 </div>
               </div>
@@ -216,61 +257,8 @@
 </section>
 <!-- /feature -->
 
-<!-- team -->
-<section class="section">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-10 mx-auto text-center">
-        <h2>Our Team</h2>
-        <p>Our company is a team of skilled software developers, designers, and
-          project managers who are passionate about creating innovative and userfriendly software solutions. We have a diverse team with a range of
-          expertise, including web and mobile development, data analysis, and
-          artificial intelligence.</p>
-        <div class="section-border"></div>
-      </div>
-    </div>
-    <div class="row no-gutters">
-      <div class="col-lg-3 col-sm-6">
-        <div class="card hover-shadow">
-          <img src="{% static 'images/team/member-1.jpg' %}" alt="team-member" class="card-img-top">
-          <div class="card-body text-center position-relative zindex-1">
-            <h4><a class="text-dark" href="team-single.html">Sara Adams</a></h4>
-            <i>Designer</i>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-sm-6">
-        <div class="card hover-shadow">
-          <img src="{% static 'images/team/member-2.jpg' %}" alt="team-member" class="card-img-top">
-          <div class="card-body text-center position-relative zindex-1">
-            <h4><a class="text-dark" href="team-single.html">Tom Bills</a></h4>
-            <i>Developer</i>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-sm-6">
-        <div class="card hover-shadow">
-          <img src="{% static 'images/team/member-3.jpg' %}" alt="team-member" class="card-img-top">
-          <div class="card-body text-center position-relative zindex-1">
-            <h4><a class="text-dark" href="team-single.html">Anna Walle</a></h4>
-            <i>Manager</i>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-sm-6">
-        <div class="card hover-shadow">
-          <img src="{% static 'images/team/member-4.jpg' %}" alt="team-member" class="card-img-top">
-          <div class="card-body text-center">
-            <h4>Devid Json</h4>
-            <i>CEO</i>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- /team -->
-
+<!-- Teams Here -->
+{% include 'templates/our-team.html' %}
 <!-- about -->
 <section class="section-lg position-relative bg-cover" data-background="{% static 'images/backgrounds/about-bg' %}.jpg">
   <img src="{% static 'images/backgrounds/about-bg-overlay.png' %}" alt="overlay" class="overlay-image img-fluid">
@@ -369,7 +357,7 @@
   <div class="row">
     <div class="col-lg-8 offset-lg-1">
       <h2 class="text-gradient-primary">Let's Start With Us!</h2>
-      <p class="h4 font-weight-bold text-white mb-4">Lorem ipsum dolor sit amet, magna habemus ius ad</p>
+      <p class="h4 font-weight-bold text-white mb-4">Experience the power of our services and discover a world of possibilities.</p>
       <a href="contact.html" class="btn btn-lg btn-primary">Let’s talk</a>
     </div>
   </div>
@@ -537,16 +525,16 @@
   <div class="pb-4">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-md-6 text-center text-md-left">
-          <p class="text-light mb-0">Copyright &copy; 2019 a theme by <a class="text-gradient-primary" href="https://themefisher.com">themefisher.com</a>
+        <div class="col-md-4 text-center text-md-left">
+          <p class="text-light mb-0">Copyright &copy; 2023 a theme by <a class="text-gradient-primary" href="https://bitandbytes.net">bitandbytes.net</a>
           </p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-8">
           <ul class="list-inline text-md-right text-center">
-            <li class="list-inline-item"><a class="d-block p-3 text-white" href="#"><i class="ti-facebook"></i></a></li>
-            <li class="list-inline-item"><a class="d-block p-3 text-white" href="#"><i class="ti-twitter-alt"></i></a></li>
-            <li class="list-inline-item"><a class="d-block p-3 text-white" href="#"><i class="ti-instagram"></i></a></li>
-            <li class="list-inline-item"><a class="d-block p-3 text-white" href="#"><i class="ti-github"></i></a></li>
+            <li class="list-inline-item"><a class="d-block p-3 text-white" href="mailto:hr@bitandbytes.net">hr@bitandbytes.net &nbsp;<i class="ti-email"></i></a></li>
+            <li class="list-inline-item"><p class="d-block p-3 text-white">+92 335 773 3547 &nbsp;<i class="ti-headphone-alt"></i></p></li>
+            <li class="list-inline-item"><a class="d-block p-3 text-white" href="https://www.linkedin.com/company/bit-and-bytes-llc/">bit and bytes llc &nbsp;<i class="ti-linkedin"></i></a></li>
+            {% comment %} <li class="list-inline-item"><a class="d-block p-3 text-white" href="#"><i class="ti-github"></i></a></li> {% endcomment %}
           </ul>
         </div>
       </div>
