Defined components and converted navbar into separate component

--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -37,51 +37,9 @@
 
 <body>
   
+<!-- Header import -->
+{% include 'components/header.html' %}
 
-<header class="navigation fixed-top">
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="index.html"><img src="{% static 'images/logo.png' %}" alt="Bit and Bytes" height="32" width="90"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
-      aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse text-center" id="navigation">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="services.html">Services</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="blog.html">Blog</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="team.html">Team</a>
-            <a class="dropdown-item" href="team-single.html">Team Details</a>
-            <a class="dropdown-item" href="career.html">Career</a>
-            <a class="dropdown-item" href="career-single.html">Career Details</a>
-            <a class="dropdown-item" href="blog-single.html">Blog Details</a>
-            <a class="dropdown-item" href="pricing.html">Pricing</a>
-            <a class="dropdown-item" href="faqs.html">FAQ's</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</header>
 
 <!-- banner -->
 <section class="banner bg-cover position-relative d-flex justify-content-center align-items-center"
@@ -97,7 +55,7 @@
 <!-- /banner -->
 
 <!-- service -->
-<section class="section">
+<section class="section" id="services">
   <div class="container">
     <div class="row">
       <div class="col-lg-10 mx-auto text-center">
@@ -258,9 +216,9 @@
 <!-- /feature -->
 
 <!-- Teams Here -->
-{% include 'templates/our-team.html' %}
+{% include 'components/our-team.html' %}
 <!-- about -->
-<section class="section-lg position-relative bg-cover" data-background="{% static 'images/backgrounds/about-bg' %}.jpg">
+<section class="section-lg position-relative bg-cover" data-background="{% static 'images/backgrounds/about-bg' %}.jpg" id="about-us">
   <img src="{% static 'images/backgrounds/about-bg-overlay.png' %}" alt="overlay" class="overlay-image img-fluid">
   <div class="container">
     <div class="row justify-content-between">
@@ -435,7 +393,7 @@
 <!-- /pricing -->
 
 <!-- blog -->
-<section class="section">
+<section class="section" id="blog">
   <div class="container">
     <div class="row">
       <div class="col-lg-10 mx-auto text-center">
